POST /keyboard
